--- a/Clash/config/ACL4SSR_Online_CT.ini
+++ b/Clash/config/ACL4SSR_Online_CT.ini
@@ -10,6 +10,9 @@
 ;增强国外GFW：支持
 
 ;设置规则标志位
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/niadie/cmACL4SSR/refs/heads/main/Clash/zgymmy.list
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/niadie/cmACL4SSR/refs/heads/main/Clash/dailimy.list
+ruleset=💬 Ai平台,https://raw.githubusercontent.com/niadie/cmACL4SSR/refs/heads/main/Clash/AImy.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/cmliu/ACL4SSR/refs/heads/main/Clash/CFnat.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
